--- a/app/src/main/res/layout/activity_edit_service_provider_services.xml
+++ b/app/src/main/res/layout/activity_edit_service_provider_services.xml
@@ -6,4 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".editServiceProviderServices">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="313dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="42dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="65dp"
+        android:text="Add services to Your Account"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="155dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="213dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="213dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="42dp"
+        android:text="Available Services:"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <Spinner
+        android:id="@+id/providerServicesSpinner"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="75dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/providerServiceText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="90dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginStart="8dp"
+        android:text="Choose a Service:"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/providerAddServiceButt"
+        app:layout_constraintEnd_toStartOf="@+id/providerServiceText"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/providerServiceText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="81dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginRight="19dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/providerAddServiceButt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView6" />
+
+    <Button
+        android:id="@+id/providerAddServiceButt"
+        android:layout_width="126dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="95dp"
+        android:layout_marginEnd="129dp"
+        android:layout_marginLeft="129dp"
+        android:layout_marginRight="129dp"
+        android:layout_marginStart="129dp"
+        android:text="Add Service"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
