--- a/app/src/main/res/layout/activity_edit_service_provider_time.xml
+++ b/app/src/main/res/layout/activity_edit_service_provider_time.xml
@@ -8,6 +8,7 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="368dp"
         android:layout_height="551dp"
         android:orientation="vertical"
@@ -81,7 +82,7 @@
             android:text="Sunday Times" />
 
         <Button
-            android:id="@+id/setTimes"
+            android:id="@+id/setTimesButt"
             android:layout_width="match_parent"
             android:layout_height="127dp"
             android:text="Set Availibility " />
