updated the add profile

--- a/app/src/main/res/layout/activity_edit_service_provider_info.xml
+++ b/app/src/main/res/layout/activity_edit_service_provider_info.xml
@@ -155,7 +155,7 @@
     <EditText
         android:id="@+id/providerAddressText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginEnd="18dp"
         android:layout_marginLeft="64dp"
         android:layout_marginRight="18dp"
