--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -55,14 +55,14 @@
     <Spinner
         android:id="@+id/accountList"
         android:layout_width="368dp"
-        android:layout_height="22dp"
-        android:layout_marginBottom="261dp"
+        android:layout_height="21dp"
+        android:layout_marginBottom="9dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="46dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeField" />
@@ -76,24 +76,27 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="43dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="118dp"
         android:text="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deletingServiceButt"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/accountList"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/deleteServiceButt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="95dp"
+        android:layout_marginEnd="37dp"
         android:layout_marginLeft="43dp"
+        android:layout_marginRight="37dp"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="118dp"
+        android:layout_marginTop="44dp"
         android:text="delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/editServiceButt"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/addServiceButt"
-        app:layout_constraintTop_toBottomOf="@+id/accountList" />
+        app:layout_constraintTop_toBottomOf="@+id/providersServices" />
 
     <Button
         android:id="@+id/editServiceButt"
@@ -104,33 +107,40 @@
         android:layout_marginLeft="43dp"
         android:layout_marginRight="24dp"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="118dp"
+        android:layout_marginTop="51dp"
         android:text="edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/deletingServiceButt"
-        app:layout_constraintTop_toBottomOf="@+id/accountList"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/_dynamic" />
 
     <Button
         android:id="@+id/editInfoButt"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="77dp"
+        android:layout_marginBottom="44dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         android:text="Edit Information"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/editServiceButt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addServiceButt"
-        app:layout_constraintVertical_bias="0.212" />
+        app:layout_constraintStart_toEndOf="@+id/providersServices"
+        app:layout_constraintTop_toBottomOf="@+id/accountList" />
 
     <ListView
-        android:id="@+id/ListView"
-        android:layout_width="168dp"
-        android:layout_height="118dp"
-        android:layout_margin="300dp"
-        android:layout_marginTop="296dp"
+        android:id="@+id/providersServices"
+        android:layout_width="220dp"
+        android:layout_height="93dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="156dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.402"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/accountList" />
+
 </android.support.constraint.ConstraintLayout>
