--- a/app/src/main/res/layout/activity_edit_service_provider_services.xml
+++ b/app/src/main/res/layout/activity_edit_service_provider_services.xml
@@ -27,31 +27,28 @@
         android:id="@+id/textView5"
         android:layout_width="155dp"
         android:layout_height="27dp"
-        android:layout_marginEnd="213dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="213dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="42dp"
         android:text="Available Services:"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Spinner
         android:id="@+id/providerServicesSpinner"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="194dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toTopOf="@+id/providerServiceText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView6"
