--- a/app/src/main/res/layout/activity_edit_service_provider_info.xml
+++ b/app/src/main/res/layout/activity_edit_service_provider_info.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/providerAddServiceButt"
         android:layout_width="160dp"
-        android:layout_height="64dp"
+        android:layout_height="63dp"
         android:layout_marginEnd="112dp"
         android:layout_marginLeft="112dp"
         android:layout_marginRight="112dp"
@@ -24,7 +24,7 @@
     <Button
         android:id="@+id/changeTimesButt"
         android:layout_width="160dp"
-        android:layout_height="64dp"
+        android:layout_height="58dp"
         android:layout_marginBottom="39dp"
         android:layout_marginEnd="112dp"
         android:layout_marginLeft="112dp"
@@ -36,7 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/providerAddServiceButt" />
+        app:layout_constraintTop_toBottomOf="@+id/providerAddServiceButt"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView7"
