--- a/app/src/main/res/layout/activity_provider_advanced_info.xml
+++ b/app/src/main/res/layout/activity_provider_advanced_info.xml
@@ -7,47 +7,39 @@
     tools:context=".providerAdvancedInfo">
 
     <TextView
-        android:id="@+id/textView12"
-        android:layout_width="253dp"
-        android:layout_height="36dp"
-        android:layout_marginEnd="65dp"
-        android:layout_marginLeft="66dp"
-        android:layout_marginRight="65dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="39dp"
-        android:text="Advanced Information"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView13"
-        android:layout_width="150dp"
-        android:layout_height="32dp"
+        android:layout_width="163dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="218dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="218dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:text="Your Services:"
-        android:textSize="18sp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.096" />
 
     <Spinner
         android:id="@+id/myproviderServices"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="414dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.115" />
+
 </android.support.constraint.ConstraintLayout>
