minor eddits for the slideshow

--- a/app/src/main/res/layout/activity_edit_service_page.xml
+++ b/app/src/main/res/layout/activity_edit_service_page.xml
@@ -17,13 +17,13 @@
             android:id="@+id/EditServiceTitle"
             android:layout_width="201dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="32dp"
-            android:layout_marginEnd="78dp"
-            android:layout_marginLeft="105dp"
-            android:layout_marginRight="78dp"
             android:layout_marginStart="105dp"
+            android:layout_marginLeft="105dp"
             android:layout_marginTop="47dp"
-            android:text="Editng Services"
+            android:layout_marginEnd="78dp"
+            android:layout_marginRight="78dp"
+            android:layout_marginBottom="32dp"
+            android:text="Editing Services"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,14 +55,18 @@
             android:id="@+id/editBaseName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:layout_marginStart="64dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="30dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="32dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Service Name (Before)"
             app:layout_constraintBottom_toTopOf="@+id/editServiceNameText"
-            app:layout_constraintStart_toEndOf="@+id/guideline4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
         <EditText
@@ -130,12 +134,16 @@
             android:id="@+id/errorMessageEdit"
             android:layout_width="219dp"
             android:layout_height="26dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginStart="92dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="17dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="15dp"
             android:textColor="@android:color/holo_red_light"
             app:layout_constraintBottom_toTopOf="@+id/editServiceButt"
-            app:layout_constraintStart_toEndOf="@+id/guideline4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editServiceWageText" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
