more minor tweaks to visuals

--- a/app/src/main/res/layout/activity_edit_service_page.xml
+++ b/app/src/main/res/layout/activity_edit_service_page.xml
@@ -37,13 +37,13 @@
             android:id="@+id/editServiceNameText"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_marginBottom="17dp"
-            android:layout_marginEnd="85dp"
             android:layout_marginStart="84dp"
             android:layout_marginTop="108dp"
+            android:layout_marginEnd="85dp"
+            android:layout_marginBottom="17dp"
             android:ems="10"
+            android:hint="Service Name (After)"
             android:inputType="textPersonName"
-            android:text="Service Name (After)"
             app:layout_constraintBottom_toTopOf="@+id/editServiceWageText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.997"
@@ -62,8 +62,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="32dp"
             android:ems="10"
+            android:hint="Service Name (Before)"
             android:inputType="textPersonName"
-            android:text="Service Name (Before)"
             app:layout_constraintBottom_toTopOf="@+id/editServiceNameText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,13 +73,13 @@
             android:id="@+id/editServiceWageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="85dp"
             android:layout_marginStart="84dp"
             android:layout_marginTop="28dp"
+            android:layout_marginEnd="85dp"
+            android:layout_marginBottom="10dp"
             android:ems="10"
+            android:hint="Serivce Rate"
             android:inputType="textPersonName"
-            android:text="Serivce Rate"
             app:layout_constraintBottom_toTopOf="@+id/errorMessageEdit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
